// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TransfersOfCarePopoverReferrals /> should renders with props correctly 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Referral From
        </label>
        <div
          className="form-control-static"
        >
          aa test1rrrrrrrrrrrrrrrrrrrrrrrrrrr
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Referral To
        </label>
        <div
          className="form-control-static"
        >
          test1rrrrrrrrrrrrr
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Date of Referral
    </label>
    <div
      className="form-control-static"
    >
      01-Jan-2018
    </div>
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Reason for Referral
        </label>
        <div
          className="form-control-static"
        >
          test1rrrrrrrrrrrr
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Clinical Summary
        </label>
        <div
          className="form-control-static"
        >
          test1rrrrrrrrrrrrr
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      State Date of Referral
    </label>
    <div
      className="form-control-static"
    >
      01-Jan-2018
    </div>
  </div>
</div>
`;

exports[`Component <TransfersOfCarePopoverReferrals /> should renders with props correctly with empty detail 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Referral From
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Referral To
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Date of Referral
    </label>
    <div
      className="form-control-static"
    >
      01-Jan-2018
    </div>
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Reason for Referral
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Clinical Summary
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      State Date of Referral
    </label>
    <div
      className="form-control-static"
    >
      01-Jan-2018
    </div>
  </div>
</div>
`;
